--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
         <ul class="portfolio-list">
           <li class="portfolio-list__item">
             <div class="portfolio-img">
-              <img src="./img/image/yt-clone.jpg" alt="portfolio-item">
+              <a href="https://mou5ville-yt-player.netlify.app">
+                <img src="./img/image/yt-clone.jpg" alt="portfolio-item">
+              </a>
+
             </div>
             <div class="portfolio-info">
               <a href="https://mou5ville-yt-player.netlify.app">Look</a>
@@ -231,7 +234,9 @@
           </li>
           <li class="portfolio-list__item">
             <div class="portfolio-img">
-              <img src="./img/image/filmoteka.jpg" alt="portfolio-item">
+              <a href="https://maksimlisovoi.github.io/team-project-js-filmoteka/">
+                <img src="./img/image/filmoteka.jpg" alt="portfolio-item">
+              </a>
             </div>
             <div class="portfolio-info">
               <a href="https://maksimlisovoi.github.io/team-project-js-filmoteka/">Look</a>
@@ -242,7 +247,9 @@
           </li>
           <li class="portfolio-list__item">
             <div class="portfolio-img">
-              <img src="./img/image/image-finder.jpg" alt="portfolio-item">
+              <a href="https://vitalii-mamchur.github.io/image-finder/">
+                <img src="./img/image/image-finder.jpg" alt="portfolio-item">
+              </a>
             </div>
             <div class="portfolio-info">
               <a href="https://vitalii-mamchur.github.io/image-finder/">Look</a>
@@ -252,7 +259,9 @@
           </li>
           <li class="portfolio-list__item">
             <div class="portfolio-img">
-              <img src="./img/image/Todo App.jpg" alt="portfolio-item">
+              <a href="https://mau5ville-todo-react.netlify.app">
+                <img src="./img/image/Todo App.jpg" alt="portfolio-item">
+              </a>
             </div>
             <div class="portfolio-info">
               <a href="https://mau5ville-todo-react.netlify.app">Look</a>
@@ -262,7 +271,9 @@
           </li>
           <li class="portfolio-list__item">
             <div class="portfolio-img">
-              <img src="./img/image/phonebook.jpg" alt="portfolio-item">
+              <a href="https://vitalii-mamchur.github.io/goit-react-hw-08-phonebook/">
+                <img src="./img/image/phonebook.jpg" alt="portfolio-item">
+              </a>
             </div>
             <div class="portfolio-info">
               <a href="https://vitalii-mamchur.github.io/goit-react-hw-08-phonebook/">Look</a>
