corrected size of footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="nav-container">
           <li><a class="nav-container__item" href="#about">About</a></li>
           <li><a class="nav-container__item" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-container__item" href="#">Contacts</a></li>
+          <li><a class="nav-container__item" href="#contacts">Contacts</a></li>
         </ul>
       </div>
       <button class="btn connection">Let's talk</button>
@@ -286,7 +286,7 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer id="contacts" class="footer">
     <div class="main-container footer-container">
       <div class="copy">
         <div class="disconnector-wite">
