--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
       </a>
       <div class="nav">
         <ul class="nav-container">
-          <li><a class="nav-container__item" href="#about">About</a></li>
+          <li><a class="nav-container__item" href="#about">About me</a></li>
           <li><a class="nav-container__item" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-container__item" id="myBtn">Contacts</a></li>
         </ul>
       </div>
-      <button class="btn connection">Let's talk</button>
+      <!-- <button class="btn connection">Let's talk</button> -->
+      <div class="flag">
+        <div class="blue"></div>
+        <div class="yellow"></div>
+      </div>
     </div>
   </header>
 
@@ -56,10 +60,10 @@
         </div>
         <div class="btn-block">
           <a href="#portfolio" class="btn connection blk">Go a projects</a>
-          <a href="#" class="btn connection">Let's talk</a>
+          <a class="btn connection btnRef">Let's talk</a>
         </div>
       </div>
-      <div class="face">
+      <div class=" face">
         <img class="face-img" src="./img/image/MVV_photo.jpg" alt="face">
       </div>
     </div>
