--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </span>
         </div>
         <div class="btn-block">
-          <a href="#portfolio" class="btn connection blk">Go a projects</a>
+          <a href="#portfolio" class="btn connection blk">Go to projects</a>
           <a class="btn connection btnRef">Let's talk</a>
         </div>
       </div>
